@@ -21,6 +21,7 @@ apply plugin: 'spring-boot'
 task execute(type:JavaExec){
     main = "com.yy.httpproxy.emitter.Benchmark"
     classpath = sourceSets.main.runtimeClasspath
+    jvmArgs "-Xms1G -Xmx4G -XX:MaxPermSize=256m"
 }
 
 
